--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,6 +4,10 @@ body {
 	background: #f4f4f4;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 .alfred {
 	position: absolute;
 	top: 50%;
@@ -23,6 +27,7 @@ body {
 	transform: translate(-50%);
 	width: 500px;
 	height: 250px;
+	padding: 25px;
 	background: #565656;
 	border-radius: 10px;
 }
@@ -36,12 +41,18 @@ body {
  	color: black;
  	font-weight: 900;
  	border-radius: 15px;
+ 	min-width: 140px;
  	opacity: 0;	
+ 	transition: 1s;
  }
 
  .bubble.-visible {
  	opacity: 1;
  }
+
+.bubble.-invisible {
+	opacity: 0;
+}
 
  .bubble:before {
  	position: absolute;
@@ -53,3 +64,30 @@ body {
  	width: 15px;
  	height: 15px;
  }
+
+ input, button {
+ 	outline: none;
+ 	border-radius: 4px;
+ 	padding: 6px;
+ 	font-size: 13px;
+ 	font-weight: 900;
+ 	border: none;
+ }
+
+input {
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+button {
+	cursor: pointer;
+	transition: 1s;
+}
+
+button:hover {
+	background: yellow;
+}
+
+button:active {
+	background: green;
+}
