--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -98,10 +98,6 @@ button:active {
 	margin-bottom: 20px;
 }
 
-.var-panel button {
-	width: 150;
-}
-
 .test-array {
 	position: absolute;
 	top: 50px;
@@ -110,6 +106,24 @@ button:active {
 	height: 200px;
 	background-color: #565656;
 	border-radius: 20px;
-	color: #fff;
+	transition: 1.5s;
 }
 
+.test-item {
+	position: relative;
+	top: 30px;
+	left: 30px;
+	width: 140px;
+	height: 140px;
+    background-color: white;4
+    line-height: 80px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+
+.time {
+	transition: 1.5s;
+}
